# trace-pilot-experiment1

./: .gitignore  CMakeLists.txt  README.md  run_vis.sh  vis.html
scripts/: gen_submit.py
src/: common.h  logger.cpp  logger.h  main.cpp  simulator.cpp  simulator.h  state.cpp  state.h
src/strategy/: greedy.cpp  greedy.h  strategy.cpp  strategy.h  turn_back.cpp  turn_back.h
